<resources>
    <string name="app_name">French Learning</string>
    <string name="no_words_available">No Words available</string>
    <string name="no_statements_available">No Statements available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="english_word_title">English Word</string>
    <string name="french_word_title">French Word</string>
    <string name="related_words_title">Related Words</string>
    <string name="comments_title">Comments</string>
    <string name="mnemonics_title">Mnemonics</string>
    <string name="not_available">Not available</string>

    <string name="pronunciation_title">Pronunciation</string>
    <string name="explanation_title">Explanation</string>
    <string name="category_title">Category</string>

    <!--Statements-->
    <string name="english_statement_title">English Statement</string>
    <string name="french_statement_title">French Statement</string>
    <string name="french_literal_translation_title">Literal Translation</string>

    <!--CATEGORIES-->
    <string name="category_simple_words">Simple Words</string>
    <string name="category_statement">Statement</string>
    <string name="category_alphabet">Alphabet</string>
    <string name="category_unknown">Unknown</string>

    <!--MENU-->
    <string name="words">Words</string>
    <string name="french_words">French Words</string>
    <string name="english_statements">English Statements</string>
    <string name="flash_cards">Flash Cards</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="show_pronunciation">Show Pronunciation</string>
    <string name="hide_pronunciation">Hide Pronunciation</string>
</resources>