<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".word_detail.view.WordDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/englishStatementHeading"
            style="@style/TitleStyle"
            android:text="@string/english_statement_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/englishStatementDetail"
            style="@style/SubtitleStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/englishStatementHeading"
            tools:text="Good Morning or Hi" />

        <com.google.android.material.divider.MaterialDivider
            style="@style/DividerStyle"
            app:layout_constraintBottom_toBottomOf="@id/englishStatementDetail"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutFrenchStatement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/englishStatementDetail">

            <TextView
                android:id="@+id/frenchStatementHeading"
                style="@style/TitleStyle"
                android:drawablePadding="4dp"
                android:text="@string/french_statement_title"
                app:drawableEndCompat="@drawable/ic_speaker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/frenchStatement"
                style="@style/SubtitleStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frenchStatementHeading"
                tools:text="Bonjour" />

            <TextView
                android:id="@+id/showPronunciation"
                style="@style/LinkStyle"
                android:text="@string/show_pronunciation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.divider.MaterialDivider
                style="@style/DividerStyle"
                app:layout_constraintBottom_toBottomOf="@id/frenchStatement"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutPronunciation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutFrenchStatement">

            <TextView
                android:id="@+id/pronunciationHeading"
                style="@style/TitleStyle"
                android:drawablePadding="4dp"
                android:text="@string/pronunciation_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pronunciation"
                style="@style/SubtitleStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pronunciationHeading"
                tools:text="bon-zhoor" />

            <com.google.android.material.divider.MaterialDivider
                style="@style/DividerStyle"
                app:layout_constraintBottom_toBottomOf="@id/pronunciation"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/explanationHeading"
            style="@style/TitleStyle"
            android:text="@string/explanation_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutPronunciation" />

        <TextView
            android:id="@+id/explanation"
            style="@style/SubtitleStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/explanationHeading"
            tools:text="This is used in formal sense" />

        <com.google.android.material.divider.MaterialDivider
            style="@style/DividerStyle"
            app:layout_constraintBottom_toBottomOf="@id/explanation"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/literalTranslationHeading"
            style="@style/TitleStyle"
            android:text="@string/french_literal_translation_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/explanation" />

        <TextView
            android:id="@+id/literalTranslation"
            style="@style/SubtitleStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/literalTranslationHeading"
            tools:text="Random comment" />

        <com.google.android.material.divider.MaterialDivider
            style="@style/DividerStyle"
            app:layout_constraintBottom_toBottomOf="@id/literalTranslation"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/categoryHeading"
            style="@style/TitleStyle"
            android:text="@string/category_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/literalTranslation" />

        <TextView
            android:id="@+id/category"
            style="@style/SubtitleStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoryHeading"
            tools:text="Simple Words" />

        <com.google.android.material.divider.MaterialDivider
            style="@style/DividerStyle"
            app:layout_constraintBottom_toBottomOf="@id/category"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
